--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nepal Agrawal Samaj - Preserving Heritage, Building Unity</title>
-    <meta name="description" content="Nepal Agrawal Samaj - A vibrant community organization preserving our cultural heritage while fostering unity and progress among the Agrawal community in Nepal." />
+    <title>Nepal Agrawal Samaj - नेपाल अग्रवाल समाज</title>
+    <meta name="description" content="Nepal Agrawal Samaj - Preserving heritage, fostering unity among Agrawal community in Nepal" />
     <meta name="author" content="Nepal Agrawal Samaj" />
 
-    <meta property="og:title" content="Nepal Agrawal Samaj - Preserving Heritage, Building Unity" />
-    <meta property="og:description" content="Join our vibrant community celebrating Agrawal heritage in Nepal. Discover our cultural events, community services, and unity initiatives." />
+    <meta property="og:title" content="Nepal Agrawal Samaj - नेपाल अग्रवाल समाज" />
+    <meta property="og:description" content="Preserving heritage, fostering unity among Agrawal community in Nepal" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/lovable-uploads/4c8e1252-8fc4-4179-b13a-d4d7a06f9936.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@nepalagrawalsamaj" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <meta name="twitter:image" content="/lovable-uploads/4c8e1252-8fc4-4179-b13a-d4d7a06f9936.png" />
   </head>
 
   <body>
